add get artwork carousel api call and update homepage header

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -37,9 +37,9 @@ swiper-container::part(button-next) {
 }
 
 swiper-container::part(button-prev) {
-  margin-left: 3.5rem;
+  margin-left: 5%;
 }
 
 swiper-container::part(button-next) {
-  margin-right: 3.5rem;
+  margin-right: 5%;
 }
